# totp-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  angular.json  build-and-install.sh  karma.conf.js  main.js  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  createReleaseAction.yml  pushDockerHub.yml  pushGitHubCR.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  totp-class.model.spec.ts  totp-class.model.ts
ui/: app.js  index.html  style.css
